--- a/angular.json
+++ b/angular.json
@@ -137,3 +137,16 @@
   "defaultProject": "shop",
 
 }
+"projects": {
+  "shop": {
+    "architect": {
+      "build": {
+        "options": {
+          "outputPath": "dist/Apps",
+          "baseHref": "/frontend/"
+        }
+      }
+    }
+  }
+}
+
